"Find previous" should reverse the original direction, and nothing else.

BUG: 130252

svn path=/branches/KDE/3.5/kdelibs/; revision=558717